--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "url": "git+https://github.com/lipemat/js-boilerplate-antd.git"
   },
   "dependencies": {
+    "antd": "^4.3.4",
     "babel-plugin-import": "^1.12.0",
     "less": "^3.9.0",
     "less-loader": "^5.0.0"
@@ -19,7 +20,6 @@
     "@lipemat/js-boilerplate": ">=5.2.0"
   },
   "peerDependencies": {
-    "antd": ">=3.22.0",
     "@lipemat/js-boilerplate": ">=5.2.0"
   },
   "bugs": {
