--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "antd": "^4.9.4",
     "babel-plugin-import": "^1.12.0",
+    "css-minimizer-webpack-plugin": "^3.3.1",
     "less": "^3.13.1",
     "less-loader": "^7.2.1"
   },
